@@ -3715,6 +3715,9 @@ main(void)
   gsl_test(test_ldlt_decomp(r),          "LDLT Decomposition");
   gsl_test(test_ldlt_solve(r),           "LDLT Solve");
 
+  gsl_test(test_ldlt_band_decomp(r),     "Banded LDLT Decomposition");
+  gsl_test(test_ldlt_band_solve(r),      "Banded LDLT Solve");
+
   gsl_test(test_HH_solve(),              "Householder solve");
   gsl_test(test_TDS_solve(),             "Tridiagonal symmetric solve");
   gsl_test(test_TDS_cyc_solve(),         "Tridiagonal symmetric cyclic solve");
